Provider: ISpiegel.Providers.FileSystem Query:    c:\temp
columns:
- "id"
- "directory"
- "name"
- "extension"
- "size"
- "creationtime"
- "writetime"
- "accesstime"
- "owner"

--- a/src/ISpiegel.Providers.FileSystem/ISpiegel.Provider.FileSystem.csproj
+++ b/src/ISpiegel.Providers.FileSystem/ISpiegel.Provider.FileSystem.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AlphaFS">
-      <HintPath>..\lib\AlphaFS.2.2.6.0\Lib\Net45\AlphaFS.dll</HintPath>
+      <HintPath>..\..\lib\Net45\AlphaFS.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
