- De i-Spiegel/bin/ directory gerefactored: nu een 32 en 64 bits versie - Het proces om te komen tot de release wat aangepast - Files die bij oplevering horen nu in i-Spiegel/templates/

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
 /src/.vs
-/src/bin
-/src/obj
-/src/*.user
-/bin/*.pdb
-/bin/GegevensVergelijker.vshost.exe
-/bin/GegevensVergelijker.vshost.exe.config
-/bin/GegevensVergelijker.vshost.exe.manifest
-/bin/*.laccdb
-/src/DemoData.accdb
-/src/ISpiegel.accdb
-/ISpiegel.Providers.FileSystem/bin/Debug
-/ISpiegel.Providers.FileSystem/obj/Debug
+/src/ISpiegel.Providers.FileSystem/bin
+/src/ISpiegel.Providers.FileSystem/obj
+/src/ISpiegel/*.accdb
+/src/ISpiegel/*.user
+/src/ISpiegel/bin
+/src/ISpiegel/obj
