--- a/templates/ISpiegel.exe.config
+++ b/templates/ISpiegel.exe.config
@@ -38,6 +38,9 @@
         <!-- Instellingen voorloop tabelnamen - niet aanpassen -->
         <value>ISPIEGEL_</value>
       </setting>
+      <setting name="output_format" serializeAs="String">
+        <value>html</value>
+      </setting>	 	 
       <!-- Einde Instellingen Database -->
 
       <!-- Instellingen mail -->
@@ -72,6 +75,11 @@
       </setting>
       <!-- Einde instellingen doorgeven aantallen voor benchmarking -->
 
+      <setting name="escape_logging" serializeAs="String">
+        <value>False</value>
+      </setting>
+	  
+	 	  
     </ISpiegel.Properties.Settings>
   </applicationSettings>
   <!-- Nodig voor juiste werking, dus niet aanpassen. -->
