- bugfixing: wanneer referentie applicatie leeg is - cognos rapportages van Hans toegevoegd van H.tenHave@noardeast-fryslan.nl - ISpiegel.accdb aangepast met de entries van H.tenHave@noardeast-fryslan.nl - Oude documenatie/rapportages verplaatst en van H.tenHave@noardeast-fryslan.nl toegevoegd

--- a/src/ISpiegel/app.config
+++ b/src/ISpiegel/app.config
@@ -68,10 +68,11 @@
 
       <!-- Instellingen doorgeven aantallen voor benchmarking -->
       <setting name="influxdb_url" serializeAs="String">
-        <value>http://84.81.153.226/write?db=ispiegel</value>
+        <!-- <value>http://digimelden.nl/influxdb/write?db=ispiegel</value> -->
+        <value>http://digimelden.nl/write?db=ispiegel</value>
       </setting>
       <setting name="influxdb_auth" serializeAs="String">
-        <value>demo:demo</value>
+        <value>ispiegel:ispiegel</value>
       </setting>
       <!-- Einde instellingen doorgeven aantallen voor benchmarking -->
 
