--- a/src/ISpiegel/Properties/Settings.settings
+++ b/src/ISpiegel/Properties/Settings.settings
@@ -17,18 +17,8 @@
     <Setting Name="databaseprovider" Type="System.String" Scope="Application">
       <Value Profile="(Default)">System.Data.OleDb</Value>
     </Setting>
-    <Setting Name="influxdb_url" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://84.81.153.226/write?db=ispiegel</Value>
-    </Setting>
     <Setting Name="databaseprefix" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ISPIEGEL_</Value>
-    </Setting>
-    <Setting Name="databaseconnection" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb&lt;/ConnectionString&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb</Value>
     </Setting>
     <Setting Name="email_subject" Type="System.String" Scope="Application">
       <Value Profile="(Default)">iSpiegel</Value>
@@ -36,11 +26,21 @@
     <Setting Name="output_format" Type="System.String" Scope="Application">
       <Value Profile="(Default)">html</Value>
     </Setting>
-    <Setting Name="influxdb_auth" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">demo:demo</Value>
-    </Setting>
     <Setting Name="escape_logging" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="databaseconnection" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb</Value>
+    </Setting>
+    <Setting Name="influxdb_url" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://digimelden.nl/write?db=ispiegel</Value>
+    </Setting>
+    <Setting Name="influxdb_auth" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">ispiegel:ispiegel</Value>
     </Setting>
   </Settings>
 </SettingsFile>
