--- a/src/ISpiegel/app.config
+++ b/src/ISpiegel/app.config
@@ -1,52 +1,65 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="ISpiegel.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1"/>
+			</dependentAssembly>
+		</assemblyBinding>
+
+	</runtime>
+	
+	<!--
+	<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <runtime>
+  </runtime>
+</configuration>
+	
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.2" newVersion="6.0.0.2" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Threading.Channels" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+	-->
   <connectionStrings>
-    <!--  
-		Verbindings-instellingen voor de gebruikte database
-		    Voorbeeld van een oracle connectionstring:
-          <add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Data Source=oracledatabase;User Id=oracleuser;Password=oraclepassword;" /> 
-        Voorbeeld van een sqlserver connectionstring:
-          <add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Server=sqlservername;Initial Catalog=databasename;Integrated Security=SSPI;" />           
-      -->
-    <!--  
-    voor het geval het niet werkt.
-		Heb je wel de 32-bits versie van Access geïnstalleert? 
-        Iedereen wil de 32-bits versie van access installeren, daarom gaan wij daar ook van uit.
-    -->
     <add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb" />
   </connectionStrings>
   <applicationSettings>
     <ISpiegel.Properties.Settings>
-      <!-- Instellingen Database -->
-      <setting name="databaseprovider" serializeAs="String">
-        <!-- 
-          Voorbeeld van een oracle provider:
-            <value>System.Data.OracleClient</value>
-          Voorbeeld van een sqlserver provider:
-            <value>System.Data.SqlClient</value>
-          Voorbeeld van een access provider:
-            <value>System.Data.OleDb</value> 
-        -->
-        <value>System.Data.OleDb</value>
-      </setting>
-      <setting name="databaseprefix" serializeAs="String">
-        <!-- Instellingen voorloop tabelnamen - niet aanpassen -->
-        <value>ISPIEGEL_</value>
-      </setting>
-      <setting name="output_format" serializeAs="String">
-        <value>html</value>
-      </setting>	 	 
-      <!-- Einde Instellingen Database -->
-
-      <!-- Instellingen mail -->
-      <setting name="email_subject" serializeAs="String">
-        <value>iSpiegel</value>
-      </setting>
       <setting name="email_from" serializeAs="String">
         <value>eduard@witteveen-automatisering.nl</value>
       </setting>
@@ -54,37 +67,36 @@
         <value>ambtenaar@gemeente.nl</value>
       </setting>
       <setting name="email_smtp" serializeAs="String">
-        <!-- <value>mailserver</value> -->
-        <!-- <value>smtp.mijndomein.nl</value> werkt niet -->
-          <value />
+        <value />
       </setting>
-      <!-- Einde instellingen mail -->
-
-      <!-- Instellingen output VALID-waarden -->
       <setting name="output_everything" serializeAs="String">
         <value>False</value>
       </setting>
-      <!-- Einde instelling output VALID-waarden -->
-
-      <!-- Instellingen doorgeven aantallen voor benchmarking -->
+      <setting name="databaseprovider" serializeAs="String">
+        <value>System.Data.OleDb</value>
+      </setting>
+      <setting name="databaseprefix" serializeAs="String">
+        <value>ISPIEGEL_</value>
+      </setting>
+      <setting name="email_subject" serializeAs="String">
+        <value>iSpiegel</value>
+      </setting>
+      <setting name="output_format" serializeAs="String">
+        <value>html</value>
+      </setting>
+      <setting name="escape_logging" serializeAs="String">
+        <value>False</value>
+      </setting>
       <setting name="influxdb_url" serializeAs="String">
-        <!-- <value>http://digimelden.nl/influxdb/write?db=ispiegel</value> -->
         <value>http://digimelden.nl/write?db=ispiegel</value>
       </setting>
       <setting name="influxdb_auth" serializeAs="String">
         <value>ispiegel:ispiegel</value>
       </setting>
-      <!-- Einde instellingen doorgeven aantallen voor benchmarking -->
-
-      <setting name="escape_logging" serializeAs="String">
-        <value>False</value>
-      </setting>
-	  
-	 	  
     </ISpiegel.Properties.Settings>
   </applicationSettings>
   <!-- Nodig voor juiste werking, dus niet aanpassen. -->
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
 </configuration>
