--- a/src/ISpiegel/app.config
+++ b/src/ISpiegel/app.config
@@ -22,39 +22,7 @@
 		</assemblyBinding>
 
 	</runtime>
-	
-	<!--
-	<?xml version="1.0" encoding="utf-8"?>
-<configuration>
-  <runtime>
-  </runtime>
-</configuration>
-	
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.2" newVersion="6.0.0.2" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Threading.Channels" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
-	-->
+
   <connectionStrings>
     <add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb" />
   </connectionStrings>
@@ -92,6 +60,9 @@
       </setting>
       <setting name="influxdb_auth" serializeAs="String">
         <value>ispiegel:ispiegel</value>
+      </setting>
+      <setting name="output_nomatch_reportall" serializeAs="String">
+        <value>False</value>
       </setting>
     </ISpiegel.Properties.Settings>
   </applicationSettings>
