comments in the config

--- a/src/ISpiegel/app.config
+++ b/src/ISpiegel/app.config
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="ISpiegel.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
+	<configSections>
+		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="ISpiegel.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+		</sectionGroup>
+	</configSections>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
@@ -20,54 +20,77 @@
 				<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1"/>
 			</dependentAssembly>
 		</assemblyBinding>
-
 	</runtime>
-
-  <connectionStrings>
-    <add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb" />
-  </connectionStrings>
-  <applicationSettings>
-    <ISpiegel.Properties.Settings>
-      <setting name="email_from" serializeAs="String">
-        <value>eduard@witteveen-automatisering.nl</value>
-      </setting>
-      <setting name="email_receiver" serializeAs="String">
-        <value>ambtenaar@gemeente.nl</value>
-      </setting>
-      <setting name="email_smtp" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="output_everything" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="databaseprovider" serializeAs="String">
-        <value>System.Data.OleDb</value>
-      </setting>
-      <setting name="databaseprefix" serializeAs="String">
-        <value>ISPIEGEL_</value>
-      </setting>
-      <setting name="email_subject" serializeAs="String">
-        <value>iSpiegel</value>
-      </setting>
-      <setting name="output_format" serializeAs="String">
-        <value>html</value>
-      </setting>
-      <setting name="escape_logging" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="influxdb_url" serializeAs="String">
-        <value>http://digimelden.nl/write?db=ispiegel</value>
-      </setting>
-      <setting name="influxdb_auth" serializeAs="String">
-        <value>ispiegel:ispiegel</value>
-      </setting>
-      <setting name="output_nomatch_reportall" serializeAs="String">
-        <value>False</value>
-      </setting>
-    </ISpiegel.Properties.Settings>
-  </applicationSettings>
-  <!-- Nodig voor juiste werking, dus niet aanpassen. -->
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-  </startup>
+	<connectionStrings>
+		<!--  
+			Verbindings-instellingen voor de gebruikte database:
+				Voorbeeld van een access connectionstring: 
+					(only works if ispiegel-32-bits and office-32-bits)
+					<add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=ispiegel.accdb"/>
+				Voorbeeld van een oracle connectionstring:
+					<add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Data Source=ispiegel;User Id=ispiegeluser;Password=ispiegelpassword;" />
+				Voorbeeld van een sqlserver connectionstring:
+					<add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Server=localhost;Initial Catalog=ispiegel;Integrated Security=SSPI;" />
+				Voorbeeld van een postgresql connectionstring:	
+					<add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Host=localhost;Database=ispiegel;Username=ispiegeluser;Password=ispiegelpassword;" />
+		-->
+		<add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb"/>
+	</connectionStrings>
+	<applicationSettings>
+		<ISpiegel.Properties.Settings>
+			<setting name="email_from" serializeAs="String">
+				<value>eduard@witteveen-automatisering.nl</value>
+			</setting>
+			<setting name="email_receiver" serializeAs="String">
+				<value>ambtenaar@gemeente.nl</value>
+			</setting>
+			<setting name="email_smtp" serializeAs="String">
+				<!-- wanneer er geen smtp is ingevoerd, wordt er gevraagd om op een knop te drukken -->
+				<value/>
+				<!-- <value>smtp.mijndomein.nl</value> -->
+			</setting>
+			<setting name="output_everything" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="databaseprovider" serializeAs="String">
+				<!-- 
+					Voorbeeld van een access provider:
+						<value>System.Data.OleDb</value> 				
+					Voorbeeld van een oracle provider:
+						<value>System.Data.OracleClient</value>
+					Voorbeeld van een sqlserver provider:
+						<value>System.Data.SqlClient</value>
+					Voorbeeld van een postgresql provider:
+						<value>Npgsql	</value>						
+				-->				
+				<value>System.Data.OleDb</value>
+			</setting>
+			<setting name="databaseprefix" serializeAs="String">
+				<!-- Instellingen voorloop tabelnamen - niet aanpassen -->
+				<value>ISPIEGEL_</value>
+			</setting>
+			<setting name="email_subject" serializeAs="String">
+				<value>iSpiegel</value>
+			</setting>
+			<setting name="output_format" serializeAs="String">
+				<value>html</value>
+			</setting>
+			<setting name="escape_logging" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="influxdb_url" serializeAs="String">
+				<value>http://digimelden.nl/write?db=ispiegel</value>
+			</setting>
+			<setting name="influxdb_auth" serializeAs="String">
+				<value>ispiegel:ispiegel</value>
+			</setting>
+			<setting name="output_nomatch_reportall" serializeAs="String">
+				<value>False</value>
+			</setting>
+		</ISpiegel.Properties.Settings>
+	</applicationSettings>
+	<!-- Nodig voor juiste werking, dus niet aanpassen. -->
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+	</startup>
 </configuration>
