--- a/src/ISpiegel/Properties/Settings.settings
+++ b/src/ISpiegel/Properties/Settings.settings
@@ -2,30 +2,11 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ISpiegel.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="email_from" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">eduard@witteveen-automatisering.nl</Value>
-    </Setting>
-    <Setting Name="email_receiver" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">ambtenaar@gemeente.nl</Value>
-    </Setting>
-    <Setting Name="email_smtp" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
-    </Setting>
     <Setting Name="output_everything" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="databaseprovider" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">System.Data.OleDb</Value>
-    </Setting>
     <Setting Name="databaseprefix" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ISPIEGEL_</Value>
-    </Setting>
-    <Setting Name="databaseconnection" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb&lt;/ConnectionString&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb</Value>
     </Setting>
     <Setting Name="email_subject" Type="System.String" Scope="Application">
       <Value Profile="(Default)">iSpiegel</Value>
@@ -44,6 +25,25 @@
     </Setting>
     <Setting Name="output_nomatch_reportall" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="databaseconnection" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb</Value>
+    </Setting>
+    <Setting Name="email_receiver" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">ambtenaar@gemeente.nl</Value>
+    </Setting>
+    <Setting Name="email_smtp" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="databaseprovider" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">System.Data.OleDb</Value>
+    </Setting>
+    <Setting Name="email_from" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">eduard@witteveenadvi.es</Value>
     </Setting>
   </Settings>
 </SettingsFile>
