--- a/src/ISpiegel/app.config
+++ b/src/ISpiegel/app.config
@@ -5,22 +5,6 @@
 			<section name="ISpiegel.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 		</sectionGroup>
 	</configSections>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0"/>
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0"/>
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1"/>
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
 	<connectionStrings>
 		<!--  
 			Verbindings-instellingen voor de gebruikte database:
@@ -39,7 +23,7 @@
 	<applicationSettings>
 		<ISpiegel.Properties.Settings>
 			<setting name="email_from" serializeAs="String">
-				<value>eduard@witteveen-automatisering.nl</value>
+				<value>eduard@witteveenadvi.es</value>
 			</setting>
 			<setting name="email_receiver" serializeAs="String">
 				<value>ambtenaar@gemeente.nl</value>
