--- a/src/ISpiegel/app.config
+++ b/src/ISpiegel/app.config
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="ISpiegel.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+			<section name="ISpiegel.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
@@ -19,7 +19,7 @@
 					<add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Host=localhost;Database=ispiegel;Username=ispiegeluser;Password=ispiegelpassword;" />
 		-->
 		<add name="ISpiegel.Properties.Settings.databaseconnection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=${WORKING_DIRECTORY}\ISpiegel.accdb"/>
-	</connectionStrings>
+ </connectionStrings>
 	<applicationSettings>
 		<ISpiegel.Properties.Settings>
 			<setting name="email_from" serializeAs="String">
@@ -33,9 +33,9 @@
 				<value/>
 				<!-- <value>smtp.mijndomein.nl</value> -->
 			</setting>
-			<setting name="output_everything" serializeAs="String">
-				<value>False</value>
-			</setting>
+   <setting name="output_everything" serializeAs="String">
+    <value>False</value>
+   </setting>
 			<setting name="databaseprovider" serializeAs="String">
 				<!-- 
 					Voorbeeld van een access provider:
@@ -49,32 +49,56 @@
 				-->				
 				<value>System.Data.OleDb</value>
 			</setting>
-			<setting name="databaseprefix" serializeAs="String">
+   <setting name="databaseprefix" serializeAs="String">
 				<!-- Instellingen voorloop tabelnamen - niet aanpassen -->
-				<value>ISPIEGEL_</value>
-			</setting>
-			<setting name="email_subject" serializeAs="String">
-				<value>iSpiegel</value>
-			</setting>
-			<setting name="output_format" serializeAs="String">
-				<value>html</value>
-			</setting>
-			<setting name="escape_logging" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="influxdb_url" serializeAs="String">
-				<value>http://digimelden.nl/write?db=ispiegel</value>
-			</setting>
-			<setting name="influxdb_auth" serializeAs="String">
-				<value>ispiegel:ispiegel</value>
-			</setting>
-			<setting name="output_nomatch_reportall" serializeAs="String">
-				<value>False</value>
-			</setting>
-		</ISpiegel.Properties.Settings>
+    <value>ISPIEGEL_</value>
+   </setting>
+   <setting name="email_subject" serializeAs="String">
+    <value>iSpiegel</value>
+   </setting>
+   <setting name="output_format" serializeAs="String">
+    <value>html</value>
+   </setting>
+   <setting name="escape_logging" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="influxdb_url" serializeAs="String">
+    <value>http://digimelden.nl/write?db=ispiegel</value>
+   </setting>
+   <setting name="influxdb_auth" serializeAs="String">
+    <value>ispiegel:ispiegel</value>
+   </setting>
+   <setting name="output_nomatch_reportall" serializeAs="String">
+    <value>False</value>
+   </setting>
+  </ISpiegel.Properties.Settings>
 	</applicationSettings>
 	<!-- Nodig voor juiste werking, dus niet aanpassen. -->
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
 	</startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
